fixed layout problem in competencelinkcreationwidget

--- a/competence-gui/competence-webapp/war/css/competencecss/evidencePopup.css
+++ b/competence-gui/competence-webapp/war/css/competencecss/evidencePopup.css
@@ -103,6 +103,10 @@
     padding: 10px !important;
 }
 
+.horizontalPanelContainer{
+	width: 100% !important;
+	padding: 30px !important;
+}
 
 /* .icon-thumbs-down { */
 /*     transform:scale(2.0,2.0) !important; */
